css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

:root {
  --ff-sans: Montserrat, Arial, Helvetica, sans-serif;

  --clr-primary: #3B82F6;
  --clr-primary-light: #DBEAFE;
  --clr-secondary: #6EE7B7;
  --clr-secondary-light: #D1FAE5;
  --clr-notification: #FEF9C3;

  --clr-white: #F8FAFC;
  --clr-gray-light: #F1F5F9;
  --clr-gray: #E2E8F0;
  --clr-gray-dark: #CBD5E1;
  --clr-black: #1E293B;
}

html {
  box-sizing: border-box;
}

* {
  box-sizing: inherit;
}

[x-cloak] {
    display: none !important;
}

body, button {
  font-family: var(--ff-sans);
}

body {
  margin: 0;
  height: 100vh;
  color: var(--clr-black);
  font-size: 24px;
  background-color: var(--clr-white);
}

p {
  margin: 0;
}

.controls {
  --ease: cubic-bezier(0.18, 0.89, 0.64, 1.18);

  position: fixed;
  background: #fffb;
  backdrop-filter: blur(6px);
  border-radius: 1rem;
  padding: 1em;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  transition: top 350ms var(--ease), transform 350ms var(--ease);
  z-index: 1000;
}

.controls--hidden {
  top: 0;
  transform: translate(-50%, -100%);
}

.links-container {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 10;
  padding: 0.5em;
  transform: translateX(0%);
  transition: transform 150ms ease-in-out;
}

.links-container--hidden {
  transform: translateX(100%);
}

.link__icon {
  display: block;
  width: 1em;
  height: 1em;
  fill: var(--clr-black);
  opacity: 0.9;
  transition: opacity 150ms ease-in-out;
}

.link:hover .link__icon {
  opacity: 0.6;
}

.notification {
  --radius: 1rem;

  position: fixed;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, 0);
  transition: transform 350ms ease-in-out;
  border-top-left-radius: var(--radius);
  border-top-right-radius: var(--radius);
  background-color: var(--clr-notification);
  padding: 1em;
  text-align: center;
}

.notification--hidden {
  transform: translate(-50%, 100%);
}

.field {
  display: flex;
  align-items: baseline;
  margin-bottom: 0.75em;
  margin-left: 1em;
}

.field__input {
  padding: 0.25em 0.5em;
  border-radius: 0.25rem;
  border: none;
  margin: 0 0.25em;
  background-color: var(--clr-gray);
  color: var(--clr-black);
}

.field__input:focus {
  outline: none;
  box-shadow:
    0px 0px 3px var(--clr-primary),
    inset 0px 0px 6px var(--clr-primary)
  ;
}

.field__input--number {
  font-size: 1.5rem;
  width: 2em;
}

.field__spinner {
  width: 1em;
  height: 1em;

  align-self: center;
  position: relative;
}

.game-container {
  position: relative;
  height: 100%;
  display: flex;
  justify-content: center;
  padding: 3rem;
}

.board {
  display: grid;
  grid-template-columns: repeat(var(--columns), minmax(0, 6rem));
  grid-template-rows: repeat(var(--rows), minmax(0, 6rem));
  grid-gap: 1rem;
  align-self: center;
}

.board__cell {
  background-color: var(--clr-gray-light);
  border-radius: 1rem;
  box-shadow: none;
  transition:background-color 150ms ease-in-out, box-shadow 150ms ease-in-out, transform 300ms ease-in-out;
  transform: scale(1);
  -webkit-tap-highlight-color: transparent;
}

.board__cell--enter {
  transform: scale(0);
}

.board--started .board__cell--empty {
  background-color: var(--clr-gray);
}

.board--started .board__cell--active {
  cursor: pointer;
}

.board--started .board__cell--active:hover {
  background: var(--clr-gray-light);
}

.board__cell--p1, .board__cell--p2 {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
}

.board__cell--p1 {
  background-color: var(--clr-primary-light);
}

.board__cell--p2 {
  background-color: var(--clr-secondary-light);
}

.board--started .board__cell--p1 {
  background-color: var(--clr-primary);
}

.board--started .board__cell--p2 {
  background-color: var(--clr-secondary);
}

.center {
  display: flex;
  justify-content: center;
}

.btn {
  color: #fffe;
  font-size: 1.5rem;
  text-transform: uppercase;
  letter-spacing: 2px;
  display: inline-block;
  border-radius: 0.5rem;
  border: none;
  cursor: pointer;
  transition: transform 0.25s ease-in-out;
  background-image: linear-gradient(
    105deg,
    var(--clr-secondary),
    var(--clr-primary),
    var(--clr-secondary),
    var(--clr-primary),
    var(--clr-secondary),
    var(--clr-primary)
  );
  background-size: 600%;
  background-position: 25%;
  opacity: 1.0;
  margin-top: 1rem;
  padding: 0.25em 0.75em;
  transform: scale(1);
  -webkit-tap-highlight-color: transparent;
}

.btn:disabled,
.btn:hover:disabled {
  background-color: var(--clr-gray-dark);
  cursor: default;
}

.btn:hover,
.btn:focus {
  outline: none;

  transform: scale(1.1);

  animation-name: slide;
  animation-iteration-count: infinite;
  animation-duration: 2s;
  animation-timing-function: linear;
}

@keyframes slide {
  from {
    background-position: 25%;
  }
  
  to {
    background-position: 75%;
  }
}

.pulse {
  animation-name: pulse;
  animation-duration: 0.2s;
  animation-direction: alternate;
  animation-iteration-count: 2;
  animation-timing-function: ease-in-out;
}

@keyframes pulse {
  from {
    transform: scale(1);
    filter: brightness(1);
  }

  to {
    transform: scale(1.1);
    filter: brightness(1.05);
  }
}

/**
 * Loading spinner
 */
.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: var(--clr-primary);
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;
  
  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
  animation: sk-bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  background-color: var(--clr-secondary);
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes sk-bounce {
  0%, 100% { -webkit-transform: scale(0.0) }
  50% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bounce {
  0%, 100% { 
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 50% { 
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

